--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-    <!-- main.js を読み込む -->
+    <script type="module" src="/src/main.ts"></script>
+    <!-- main.ts を読み込む -->
   </body>
 </html>
