--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Default OGP tags -->
+    <meta property="og:locale" content="ja_JP" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="デモサイト" />
+    <meta property="og:description" content="イラストと立ち絵の掲載サイト" />
+    <meta property="og:image" content="/favicon.svg" />
+    <meta property="og:url" content="" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="デモサイト" />
+    <meta name="twitter:description" content="イラストと立ち絵の掲載サイト" />
+    <meta name="twitter:image" content="/favicon.svg" />
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="/assets/css/style.css" />
     <title>デモサイト</title>
